crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies/snapshots/query - dependencies from leaf package.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "-d"
    - build
  cwd: packages/core
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies
---
{}
