crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies/snapshots/query - dependencies from utils.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "-d"
    - build
  cwd: packages/utils
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies
---
{
  "packages/core#build": []
}
