crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies/snapshots/query - dependencies with package specifier.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "-d"
    - "@test/app#build"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies
---
{
  "packages/core#build": [],
  "packages/utils#build": [
    "packages/core#build"
  ]
}
