crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies/snapshots/query - dependencies with workspace root.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "-d"
    - "-w"
    - build
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies
---
{}
