crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies/snapshots/query - direct with transitive conflict.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: err
info:
  args:
    - run
    - "-d"
    - "-t"
    - build
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies
---
error: the argument '--direct' cannot be used with '--transitive'

Usage: vt run --direct <TASK_SPECIFIER> <ADDITIONAL_ARGS>...

For more information, try '--help'.
