crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies/snapshots/query - transitive from app for comparison.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
info:
  args:
    - run
    - "-t"
    - build
  cwd: packages/app
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies
---
{
  "packages/app#build": [
    "packages/core#build",
    "packages/utils#build"
  ],
  "packages/core#build": [],
  "packages/utils#build": [
    "packages/core#build"
  ]
}
