crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies/snapshots/task graph.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/direct-dependencies
---
[
  {
    "key": [
      "<workspace>/packages/app",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/app",
        "task_name": "build",
        "package_path": "<workspace>/packages/app"
      },
      "resolved_config": {
        "command": "echo 'Building @test/app'",
        "resolved_options": {
          "cwd": "<workspace>/packages/app",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/core",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/core",
        "task_name": "build",
        "package_path": "<workspace>/packages/core"
      },
      "resolved_config": {
        "command": "echo 'Building @test/core'",
        "resolved_options": {
          "cwd": "<workspace>/packages/core",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/utils",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/utils",
        "task_name": "build",
        "package_path": "<workspace>/packages/utils"
      },
      "resolved_config": {
        "command": "echo 'Building @test/utils'",
        "resolved_options": {
          "cwd": "<workspace>/packages/utils",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  }
]
